# Quick-installation-of-C-

./: CMakeLists.txt  README.md  installer  main.cpp
include/: Quic-Installation-Of-C-.hpp
src/: Quic-Installation-Of-C-.cpp  main.cpp
